@@ -1,0 +1,18 @@
+SCENARIO_BEGIN Forwarder and a timeout happens on server query.
+STEP 1 QUERY
+ENTRY_BEGIN
+SECTION QUESTION
+www.example.com. IN A
+ENTRY_END
+; But the pending query times out!
+STEP 2 TIMEOUT
+; returns servfail
+STEP 4 CHECK_ANSWER
+ENTRY_BEGIN
+MATCH opcode qname qtype
+SECTION QUESTION
+REPLY SERVFAIL QR
+MATCH all
+www.example.com. IN A
+ENTRY_END
+SCENARIO_END
